--- a/Task6.1D/look at here/Task61D/app/src/main/res/drawable/normal_option.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/drawable/normal_option.xml
@@ -7,6 +7,8 @@
 
     <solid android:color="@color/white"/>
 
-    <stroke android:color="@color/black" android:width="2dp"/>
-
+    <gradient
+        android:angle="225"
+        android:startColor="#0B67AE"
+        android:endColor="#1B6EE8"/>
 </shape>
