--- a/Task6.1D/look at here/Task61D/app/src/main/res/drawable/result_layout.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/drawable/result_layout.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="4dp"/>
 
-
-    <stroke android:width="1dp" android:color="@color/black"/>
-
-
-    <solid android:color="#C3B6B6"/>
+    <gradient
+    android:angle="225"
+    android:startColor="#0B67AE"
+    android:endColor="#1B6EE8"/>
 </shape>
