--- a/Task6.1D/look at here/Task61D/app/src/main/res/layout/activity_interest_selection.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/layout/activity_interest_selection.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_color"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -10,11 +11,13 @@
         android:layout_height="wrap_content"
         android:text="@string/your"
         android:textSize="30sp"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="@string/interests"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -22,22 +25,25 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
         android:text="@string/you_may_select_upto_10_topics"
         android:textSize="18sp"
         android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/checkBoxTechnology"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -45,9 +51,11 @@
 
         <CheckBox
             android:id="@+id/checkBoxSports"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -55,9 +63,11 @@
 
         <CheckBox
             android:id="@+id/checkBoxMusic"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -65,27 +75,31 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/checkBoxArt"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
-            android:text="@string/art" />
+            android:text="@string/art"
+            />
 
         <CheckBox
             android:id="@+id/checkBoxAlgorithms"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -95,17 +109,18 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/checkBoxWebDevelopment"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -113,9 +128,11 @@
 
         <CheckBox
             android:id="@+id/checkBoxTesting"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:gravity="center"
+            android:layout_marginStart="10dp"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -125,17 +142,17 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="horizontal"
-        android:padding="20dp">
+        android:orientation="horizontal">
 
         <CheckBox
             android:id="@+id/checkBoxAI"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -143,9 +160,11 @@
 
         <CheckBox
             android:id="@+id/checkBoxDataStructure"
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
             android:background="@drawable/check_style"
             android:button="@null"
             android:padding="10dp"
@@ -154,8 +173,11 @@
 
     <Button
         android:id="@+id/continueButton"
-        android:layout_width="wrap_content"
+        style="@style/ButtonStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:text="@string/next" />
