--- a/Task6.1D/look at here/Task61D/app/src/main/res/layout/final_page.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/layout/final_page.xml
@@ -2,8 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background_color"
     android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:elevation="25dp"
+        android:background="@drawable/title_ai"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/social_leaderboard"
+            android:contentDescription="@string/image_ai" />
+
+
+        <TextView
+            style="@style/content_font"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:textColor="@color/black"
+            android:layout_marginStart="5dp"
+            android:text="@string/generated_by_ai" />
+
+
+    </LinearLayout>
 
 
     <TextView
@@ -39,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
+        android:elevation="25dp"
         android:background="@drawable/result_layout"
         android:orientation="vertical">
 
@@ -71,6 +102,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
+        android:elevation="25dp"
         android:background="@drawable/result_layout"
         android:orientation="vertical">
 
@@ -103,6 +135,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:elevation="25dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/result_layout"
         android:orientation="vertical">
@@ -134,20 +167,24 @@
 
     <Button
         android:id="@+id/restart"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="200dp"
+        style="@style/ButtonStyle"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:text="@string/take_new_quiz" />
 
     <Button
         android:id="@+id/quit"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="200dp"
+        style="@style/ButtonStyle"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:text="@string/finish" />
 
 </LinearLayout>
