--- a/Task6.1D/look at here/Task61D/app/src/main/res/layout/quiz_content.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/layout/quiz_content.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@drawable/background_color"
     android:orientation="vertical">
 
     <TextView
@@ -38,7 +38,8 @@
     </LinearLayout>
 
     <TextView
-        style="@style/content_font"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -47,7 +48,8 @@
 
     <TextView
         android:id="@+id/questions"
-        style="@style/content_font"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
