--- a/Task6.1D/look at here/Task61D/app/src/main/res/values/Styles.xml
+++ b/Task6.1D/look at here/Task61D/app/src/main/res/values/Styles.xml
@@ -6,8 +6,16 @@
         <item name="android:textSize">30sp</item>
     </style>
     <style name="content_font">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">15sp</item>
+    </style>
+    <style name="ButtonStyle">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:radius">3dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:backgroundTint">#5AB350</item>
     </style>
 </resources>
